# SDSS_Groups_ML

./: .gitignore  .tmuxgo  LICENSE  Makefile  README.md  SDSS_ML_settings.mk  Synch_files.sh  Synch_zoidberg.sh  environment.yml  setup.cfg  setup.py
docs/: conf.py  getting-started.rst  index.rst  make.bat  project_organization.rst
docs/commands_files/: commands.rst
docs/getting_started_files/: getting-started.rst
docs/methods_files/: mock_catalogues.rst
docs/project_description/: SDSS_ML_project_description.rst
references/commands_used/: commands_preprocessing_analysis.sh  commands_used_analysis.sh  commands_used_data_preprocessed.sh
src/: __init__.py
src/data/: download_dataset.py
src/data_analysis/: catl_algorithm_comparison.py  catl_algorithm_comparison_plots.py  catl_hod_diff_comparison.py  catl_hod_diff_comparison_plots.py  catl_model_application_on_data.py  catl_sigma_c_clf_comparison_plots.py  catl_sigma_c_clf_diff_comparison.py  catl_sigma_c_clf_diff_comparison_plots.py  catl_velocity_bias_diff_comparison.py  catl_velocity_bias_diff_comparison_plots.py  data_analysis_main.py
src/data_catls/: catl_feature_calculations_data.py  catl_model_application_on_data.py  catl_model_application_on_data_plots.py  catl_model_group_mass_variations.py  data_catls_analysis_main.py  data_preprocessing_model_main.py  feature_processing_data.py
src/data_catls_make/: catl_model_application_on_data.py
src/data_preprocessing/: catl_feature_calculations.py  catl_feature_general_plots.py  data_preprocessing_main.py  download_dataset.py  feature_processing.py
(+18 files in other folders)
