[metadata]
name         = SDSS_Groups_ML
description  = Estimation of Group Masses using a set of Machine-Learning techniques
author       = Victor Calderon
author_email = victor.calderon@vanderbilt.edu
license      = MIT
url          = https://github.com/vcalderon2009/SDSS_Groups_ML
version      = 0.0.0dev